--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -7789,7 +7789,7 @@ def delta_to_grid_dy(cos_wdir, sin_wdir, delta_x, delta_y):
     Computes the grid-aligned y coordinate of the delta vector, given the wind-aligned [ΔX ΔY] coordinates.
     Returns a signed distance (same unit as ΔX and ΔY).
     """
-    wdir_y      = -cos_wdir  # TODO: Why is this negative? Perhaps because origin is in upper-left in GridFire...
+    wdir_y      = cos_wdir  # FIXME: Should this be negative or positive?
     wdir_perp_y = sin_wdir
     return delta_x * wdir_y + delta_y * wdir_perp_y
 
@@ -7844,7 +7844,7 @@ From the above moments, $\mu_X$ and $\sigma_X$ can be obtained using
 the properties of the log-normal distribution:
 
 \begin{align}
-  \sigma_X = & \ln \left(1 + \frac{\text{Var}[\Delta_X]}{\mathbb{E}[\Delta_X]^2}\right) & \\
+  \sigma_X^2 = & \ln \left(1 + \frac{\text{Var}[\Delta_X]}{\mathbb{E}[\Delta_X]^2}\right) & \\
   \nonumber \\
   \mu_X = & \ln \frac{\mathbb{E}[\Delta_X]^2}{\sqrt{\text{Var}[\Delta_X] + \mathbb{E}[\Delta_X]^2}} &
 \end{align}
