--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6609,7 +6609,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
       - fireline_intensity            :: 2D float array (kW/m)
       - flame_length                  :: 2D float array (m)
       - time_of_arrival               :: 2D float array (min)
-      - firebrand_count               :: 2D integer array (number of firebrands) (Optional: needed for spotting)
+      - firebrand_count               :: 2D integer array (number of firebrands) (Optional)
     - cube_resolution           :: tuple with these fields
       - band_duration                 :: minutes
       - cell_height                   :: meters
@@ -6642,7 +6642,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
       - fireline_intensity    :: 2D float array (kW/m)
       - flame_length          :: 2D float array (m)
       - time_of_arrival       :: 2D float array (min)
-      - firebrand_count       :: 2D integer array (number of firebrands) (only included when spotting is used)
+      - firebrand_count       :: 2D integer array (number of firebrands) (only included when provided as an input)
     - spot_ignitions       :: dictionary of (ignition_time -> ignited_cells) (only included when spotting is used)
     """
     # Extract simulation dimensions
@@ -6832,6 +6832,8 @@ output_matrices = fire_spread_results["output_matrices"] # updated 2D arrays (mu
 
 #+NAME: run-spread-fire-with-phi-field-stats
 #+begin_src python
+import numpy as np
+
 #============================================================================================
 # Display summary statistics of our fire spread results
 #============================================================================================
@@ -7146,6 +7148,8 @@ spot_ignitions  = fire_spread_results.get("spot_ignitions", {}) # remaining fire
 
 #+NAME: run-spread-fire-with-phi-field-with-spotting-stats
 #+begin_src python
+import numpy as np
+
 #============================================================================================
 # Display summary statistics of our fire spread results
 #============================================================================================
@@ -7188,10 +7192,11 @@ pprint(get_array_stats(output_matrices["flame_length"]), sort_dicts=False)
 print("\nTime of Arrival (minutes)")
 pprint(get_array_stats(output_matrices["time_of_arrival"]), sort_dicts=False)
 
-print("\nFirebrand Count (number of firebrands)")
-pprint(get_array_stats(output_matrices["firebrand_count"], use_burn_scar_mask=False), sort_dicts=False)
-
-print("\nTotal Firebrands on Grid: " + str(np.sum(output_matrices["firebrand_count"])))
+firebrand_count_matrix = output_matrices.get("firebrand_count")
+if isinstance(firebrand_count_matrix, np.ndarray):
+    print("\nFirebrand Count (number of firebrands)")
+    pprint(get_array_stats(firebrand_count_matrix, use_burn_scar_mask=False), sort_dicts=False)
+    print("\nTotal Firebrands on Grid: " + str(np.sum(firebrand_count_matrix)))
 
 print("\nFuture Spot Ignitions:")
 pprint(spot_ignitions)
@@ -7349,14 +7354,20 @@ heatmap_configs = [
         "title"   : "Flame Length",
         "filename": "../doc/pics/els_spot_flame_length.png",
     },
-    {
-        "matrix"  : output_matrices["firebrand_count"],
-        "colors"  : "hot",
-        "units"   : "number of firebrands",
-        "title"   : "Firebrand Count",
-        "filename": "../doc/pics/els_spot_firebrand_count.png",
-    },
 ]
+
+
+firebrand_count_matrix = output_matrices.get("firebrand_count")
+if isinstance(firebrand_count_matrix, np.ndarray):
+    heat_map_config.append(
+        {
+            "matrix"  : firebrand_count_matrix,
+            "colors"  : "hot",
+            "units"   : "number of firebrands",
+            "title"   : "Firebrand Count",
+            "filename": "../doc/pics/els_spot_firebrand_count.png",
+        }
+    )
 
 
 contour_configs = [
@@ -7386,7 +7397,7 @@ for contour_config in contour_configs:
 |--------------------------------------------------+------------------------------------------------|
 
 #+NAME: spot-firebrand-count-matplotlib-heatmap
-#+caption: Firebrand count with spotting enabled
+#+caption: Firebrand count with spotting enabled (NOTE: This is not the same as ember exposure.)
 file:../doc/pics/els_spot_firebrand_count.png
 
 #+NAME: spot-time-of-arrival-matplotlib-countours
@@ -8179,6 +8190,7 @@ ignited.
 #+NAME: spread-firebrands
 #+begin_src python
 from math import sin, cos, hypot, radians
+import numpy as np
 import pyretechnics.conversion as conv
 import pyretechnics.fuel_models as fm
 
@@ -8211,7 +8223,7 @@ def cast_firebrand(rand_gen,
                    temperature_cube,
                    fuel_moisture_dead_1hr_cube,
                    fire_type_matrix,
-                   firebrand_count_matrix,
+                   firebrand_count_matrix, # NOTE: May be None
                    rows,
                    cols,
                    cell_height,
@@ -8243,8 +8255,9 @@ def cast_firebrand(rand_gen,
     #=======================================================================================
 
     if is_in_bounds(target_y, target_x, rows, cols) and fire_type_matrix[target_y,target_x] == 0:
-        # Firebrand landed on the grid in an unburned cell, so record it in firebrand_count_matrix
-        firebrand_count_matrix[target_y,target_x] += 1
+        # Firebrand landed on the grid in an unburned cell, so record it in firebrand_count_matrix (if provided)
+        if isinstance(firebrand_count_matrix, np.ndarray):
+            firebrand_count_matrix[target_y,target_x] += 1
 
         if is_burnable_cell(fuel_model_cube, source_t, target_y, target_x):
             # Firebrand landed in a cell with a burnable fuel model, so calculate its ignition probability
@@ -8273,7 +8286,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
       - fireline_intensity            :: 2D float array (kW/m)
       - flame_length                  :: 2D float array (m)
       - time_of_arrival               :: 2D float array (min)
-      - firebrand_count               :: 2D integer array (number of firebrands)
+      - firebrand_count               :: 2D integer array (number of firebrands) (Optional)
     - cube_resolution           :: tuple with these fields
       - band_duration                 :: minutes
       - cell_height                   :: meters
@@ -8291,8 +8304,9 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
 
     samples a number of firebrands from a Poisson distribution parameterized by expected_ember_count,
     casts these from the space_time_coordinate into grid cells in the space-time cube, records their landing
-    locations in output_matrices["firebrand_count"], filters out all of the firebrands that fizzle out in either
-    burnable or non-burnable fuels, and returns any that ignite new spot fires in a tuple with these fields:
+    locations in output_matrices["firebrand_count"] (if provided), filters out all of the firebrands that
+    fizzle out in either burnable or non-burnable fuels, and returns any that ignite new spot fires in
+    a tuple with these fields:
 
     - ignition_time :: minutes
     - ignited_cells :: list of (y,x) grid coordinates
@@ -8313,7 +8327,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
         temperature_cube             = space_time_cubes["temperature"]
         fuel_moisture_dead_1hr_cube  = space_time_cubes["fuel_moisture_dead_1hr"]
         fire_type_matrix             = output_matrices["fire_type"]
-        firebrand_count_matrix       = output_matrices["firebrand_count"]
+        firebrand_count_matrix       = output_matrices.get("firebrand_count")
         (_, rows, cols)              = fuel_model_cube.shape
         (_, cell_height, cell_width) = cube_resolution
         (t, y, x)                    = space_time_coordinate
